--- a/dp-price-scraper/src/index.html
+++ b/dp-price-scraper/src/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Price Web Scraper</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <h1>Price Web Scraper</h1>
+    <p>Welcome to your Price Web-scraping Tool</p>
+    <p>
+      made by yours truly
+    </p>
   </body>
 </html>
