--- a/dp-price-scraper/src/index.html
+++ b/dp-price-scraper/src/index.html
@@ -2,14 +2,42 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Price Web Scraper</title>
+    <title>D&P Price Web Scraper</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body>
-    <h1>Price Web Scraper</h1>
-    <p>Welcome to your Price Web-scraping Tool</p>
-    <p>
-      made by yours truly
-    </p>
+  <body class="ui">
+    <head>
+      <table>
+        <tr>
+          <td>
+            <img src="./images/D&P DRIP FINAL small.png" alt="" width="100px" height="100px">
+          </td>
+          <td>
+            <span id="title">Price Web Scraper</span>
+          </td>
+        </tr>
+      </table>
+    </head>
+    <nav>
+      <button class="navbtn"> 
+        <div class="translate"></div> 
+        <a href="#">Dashboard</a>
+      </button>
+      <button class="navbtn">
+        <div class="translate"></div> 
+        <a href="#">Enter Data</a>
+      </button>
+      <button class="navbtn">
+        <div class="translate"></div> 
+        <a href="#">Export</a>
+      </button>
+      <button class="navbtn">
+        <div class="translate"></div> 
+        <a href="#">Backup & Recover</a> 
+      </button>
+    </nav>
+   <main>
+    <iframe src="./dashboard.html" frameborder="0"></iframe>
+   </main>
   </body>
 </html>
